samples/_failures_safe/1761138415_8bb2f7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_76fbaea9.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_76fbaea9.c:141:41: error: ‘analy’ undeclared (first use in this function)
  141 |         const struct LogEntry *entry = &analy
      |                                         ^~~~~
./samples/SAFE/__tmp_76fbaea9.c:141:41: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_76fbaea9.c:141:22: error: expected ‘,’ or ‘;’ at end of input
  141 |         const struct LogEntry *entry = &analy
      |                      ^~~~~~~~
./samples/SAFE/__tmp_76fbaea9.c:141:22: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_76fbaea9.c:141:22: error: expected declaration or statement at end of input
